@@ -8,6 +8,9 @@ Changes with Apache 2.4.3
      possible XSS for a site where untrusted users can upload files to
      a location with MultiViews enabled. [Niels Heinen <heinenn google.com>]
 
+  *) mod_deflate: Skip compression if compression is enabled at SSL level.
+     [Stefan Fritsch]
+
   *) core: Add missing HTTP status codes registered with IANA.
      [Julian Reschke <julian.reschke gmx.de>, Rainer Jung]
 
